# hello-world-plugin

./: .gitignore  CMakeLists.txt  README.md
helloWorld/: CMakeLists.txt  helloWorldCannyProcess.cpp  helloWorldCannyProcess.h  helloWorldPlugin.cpp  helloWorldPlugin.h  helloWorldPluginExport.h  helloWorldToolBox.cpp  helloWorldToolBox.h  helloWorldWorkspace.cpp  helloWorldWorkspace.h
helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.h  helloworldCannyProcess.cpp  helloworldCannyProcess.h  helloworldPlugin.cpp  helloworldPlugin.h  helloworldToolBox.cpp  helloworldToolBox.h  helloworldWorkspace.cpp  helloworldWorkspace.h
